--- a/products.html
+++ b/products.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/images/images/necklace-svgrepo-com.svg" sizes="any" type="image/svg+xml">
     <link rel="stylesheet" href="/static/css/products.css">
     <link rel="stylesheet" href="/static/css/fonts.css">
     <title>Product Info</title>
